--- a/.emacs.d/myinit.org
+++ b/.emacs.d/myinit.org
@@ -65,20 +65,25 @@
 (setq package-enable-at-startup nil)
 
 (add-to-list 'package-archives
-         '("org" . "https://orgmode.org/elpa/") t)
+             '("org" . "https://orgmode.org/elpa/") t)
 
 (add-to-list 'package-archives
-         '("melpa" . "https://melpa.org/packages/"))
+             '("melpa" . "https://melpa.org/packages/"))
 
 (package-initialize)
 
 (unless (package-installed-p 'use-package)
-(package-refresh-contents)
-(package-install 'use-package))
+  (package-refresh-contents)
+  (package-install 'use-package))
 
 (use-package which-key
-:ensure t
-:config (which-key-mode))
+  :ensure t
+  :config (which-key-mode))
+
+(use-package org
+  :mode (("\\.org$" . org-mode))
+  :ensure org-plus-contrib
+  :config)
 
 #+END_SRC
 
