--- a/.emacs.d/myinit.org
+++ b/.emacs.d/myinit.org
@@ -165,6 +165,33 @@
   :ensure t)
 #+END_SRC
 
+** sidebar.el
+
+#+begin_src emacs-lisp
+(use-package dash
+  :ensure t)
+
+(use-package dash-functional
+  :ensure t)
+
+(use-package s
+  :ensure t)
+
+(use-package ov
+  :ensure t)
+
+(use-package projectile
+  :ensure t)
+
+(use-package frame-local
+  :ensure t)
+
+(add-to-list 'load-path "~/.emacs.d/manually-installed/sidebar.el/")
+(require 'sidebar)
+; (global-set-key (kbd "C-x C-f") 'sidebar-open)
+; (global-set-key (kbd "C-x C-a") 'sidebar-buffers-open)
+#+end_src
+
 ** Todo Keywords
 
 #+BEGIN_SRC emacs-lisp
