--- a/.emacs.d/myinit.org
+++ b/.emacs.d/myinit.org
@@ -150,6 +150,7 @@
 (setq org-edit-src-content-indentation 0)
 (setq org-goto-interface 'outline-path-completion)
 (setq org-outline-path-complete-in-steps nil)
+(setq org-html-htmlize-output-type 'css)
 
 ;; Bigger Latex Fragments
 (plist-put org-format-latex-options :scale 1.5)
