emacs init update

--- a/.emacs.d/myinit.org
+++ b/.emacs.d/myinit.org
@@ -25,6 +25,9 @@
 
 (global-visual-line-mode t)
 
+(setq visual-line-fringe-indicators
+      '(left-curly-arrow right-curly-arrow))
+
 (setq browse-url-browser-function 'browse-url-generic
       browse-url-generic-program "epiphany")
 
