--- a/.emacs.d/myinit.org
+++ b/.emacs.d/myinit.org
@@ -14,6 +14,13 @@
 (fset 'yes-or-no-p 'y-or-n-p)
 (global-set-key (kbd "<f5>") 'revert-buffer)
 
+;;
+;; So we don't end up with the damn two spaces after “.”
+;;
+;; https://www.gnu.org/software/emacs/manual/html_node/emacs/Sentences.html
+;;
+(setq sentence-end-double-space nil)
+
 ;; For terminal non-blinking cursor. See C-h m Emacs RET m Cursor Display RET.
 (setq visible-cursor nil)
 
