--- a/.emacs.d/myinit.org
+++ b/.emacs.d/myinit.org
@@ -159,28 +159,29 @@
 * Packages
 
 #+BEGIN_SRC emacs-lisp
-(require 'package)
+    (require 'package)
 
-(setq package-enable-at-startup nil)
+    (setq package-enable-at-startup nil)
 
-(add-to-list 'package-archives
-             '("org" . "https://orgmode.org/elpa/") t)
+    (add-to-list 'package-archives
+                 '("org" . "https://orgmode.org/elpa/") t)
 
-(add-to-list 'package-archives
-             '("melpa-stable" . "https://stable.melpa.org/packages/") t)
+    (add-to-list 'package-archives
+               '("melpa" . "https://melpa.org/packages/")
+               t)
 
-(unless (package-installed-p 'use-package)
-  (package-refresh-contents)
-  (package-install 'use-package))
+    (unless (package-installed-p 'use-package)
+      (package-refresh-contents)
+      (package-install 'use-package))
 
-(use-package which-key
-  :ensure t
-  :config (which-key-mode))
+    (use-package which-key
+      :ensure t
+      :config (which-key-mode))
 
-(use-package org
-  :mode (("\\.org$" . org-mode))
-  :ensure org-plus-contrib
-  :config)
+    (use-package org
+      :mode (("\\.org$" . org-mode))
+      :ensure org-plus-contrib
+      :config)
 
 #+END_SRC
 
