nvim: Improve readme asciidoc config attributes

--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,22 @@
 = Dotfiles
+:page-tags: dotfiles bash shell vim nvim emacs editor cmdline config
+:favicon: https://fernandobasso.dev/cmdline.png
+:icons: font
+:sectlinks:
+:sectnums!:
+:toclevels: 6
+:toc: left
+:source-highlighter: highlight.js
+:imagesdir: __assets
+:stem: latexmath
 :experimental:
+ifdef::env-github[]
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+endif::[]
 
 == nvim
 
