nvim: Add two Telescope-related keymaps
• <Leader>t to trigger :Telescope
• <Leader>tl to trigger :Telescope lsp_<C-d>, as this one prompts for
  specific lsp-related stuff.

--- a/README.adoc
+++ b/README.adoc
@@ -54,3 +54,5 @@ the browser.
 * kbd:[<Leader>ws]: [W]orkspace [S]ymbols.
 * kbd:[<Leader>gr]: [G]o to [R]eferences.
 * kbd:[<Leader>gI]: [G]o to [I]mplementation.
+* kbd:[<Leader>t]: [T]elescope.
+* kbd:[<Leader>tl]: to trigger [T]elescope [l]sp_<C-d>, as this one prompts for specific lsp-related stuff.
